--- a/force-app/main/default/lwc/financesModal/financesModal.html
+++ b/force-app/main/default/lwc/financesModal/financesModal.html
@@ -4,7 +4,7 @@
     <lightning-modal-footer>
         <lightning-button
             label="Add Expenses"
-            onclick={handleOkay}
+            onclick={handleAddExpense}
         ></lightning-button>
     </lightning-modal-footer>
 </template>
